--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# config file which contains (personal) postgres password
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
